CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT(BE2)

SET(CMAKE_VERBOSE_MAKEFILE off)
SET(CMAKE_CXX_FLAGS "-O3")
SET(CMAKE_INSTALL_PREFIX ~/bin )
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

IF   ( CMAKE_SIZEOF_VOID_P EQUAL 8 )
  LINK_DIRECTORIES ( /usr/lib /lib )
ELSE ( CMAKE_SIZEOF_VOID_P EQUAL 8 )
  LINK_DIRECTORIES ( /usr/lib64 /lib64 )
ENDIF( CMAKE_SIZEOF_VOID_P EQUAL 8 )

FIND_PACKAGE (GSL REQUIRED)
FIND_PACKAGE (GTS REQUIRED)
FIND_PACKAGE (GLIB2 REQUIRED)

INCLUDE_DIRECTORIES( ${GSL_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${GTS_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${GLIB2_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES( ${BE2_SOURCE_DIR}/src )

SET (be2      	src/be2.cxx 	)
SET (msms2gts 	src/msms2gts.cxx) 
SET (eg 	src/eg.cxx
		src/topo.cxx
		src/lib.cxx
		src/rotate.cxx
		src/clash.cxx
		src/pdb.cxx 	)

ADD_EXECUTABLE (be2	${be2}		)
ADD_EXECUTABLE (eg	${eg}  		)
ADD_EXECUTABLE (msms2gts ${msms2gts} 	)

TARGET_LINK_LIBRARIES (be2 	${GSL_LIBRARIES} m )
TARGET_LINK_LIBRARIES (eg 	${GSL_LIBRARIES} m )
TARGET_LINK_LIBRARIES (msms2gts ${GSL_LIBRARIES} ${GTS_LIBRARIES} ${GLIB2_LIBRARIES} m )

SET_TARGET_PROPERTIES (be2 	PROPERTIES OUTPUT_NAME be2	)
SET_TARGET_PROPERTIES (eg 	PROPERTIES OUTPUT_NAME eg     	)
SET_TARGET_PROPERTIES (msms2gts PROPERTIES OUTPUT_NAME msms2gts	)

INSTALL (TARGETS be2 
	DESTINATION ${CMAKE_INSTALL_PREFIX})
INSTALL (TARGETS eg
	DESTINATION ${CMAKE_INSTALL_PREFIX})
INSTALL (TARGETS msms2gts
	DESTINATION ${CMAKE_INSTALL_PREFIX})

file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/eglib)
INSTALL (PROGRAMS  ${BE2_SOURCE_DIR}/src/fycqr
	DESTINATION ${CMAKE_INSTALL_PREFIX}/eglib )
